--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ li {
 
 .home {
   font-family: 'Fira Sans', serif;
-  font-size: 20px;
+  font-size: 10px;
   color: #ddd;
 }
 
@@ -34,8 +34,11 @@ li {
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
-  height: 200px;
-  box-sizing: content-box;
+  height: 100px;
+}
+
+.youtubeBanner img {
+  width: 150px;
 }
 
 .youtubeBannerInfo {
@@ -49,12 +52,12 @@ li {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  margin-right: 20px;
-  padding-bottom: 17px;
+  margin-right: 10px;
+  padding-bottom: 7px;
+  width: 25%;
 }
 
 #bannerLeft h1 {
-  width: 250px;
   text-align: left;
 }
 
@@ -65,24 +68,25 @@ li {
 }
 
 #bannerRight {
-  margin: 30px auto 0 auto;
+  margin: 15px auto 0 auto;
+  width: 75%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 #bannerDescription {
-  width: 900px;
-  line-height: 35px;
+  line-height: 20px;
 }
 #bannerNames {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 /*---SEARCH BAR AND VIDEO PLAYERS----*/
 .searchContainer {
   display: flex;
+  flex-direction: column-reverse;
   justify-content: space-around;
   align-items: center;
   margin: 20px auto 20px auto;
@@ -90,7 +94,7 @@ li {
 }
 
 .searchForm {
-  width: 350px;
+  width: 200px;
 }
 
 .searchForm input {
@@ -100,20 +104,21 @@ li {
   border-radius: 5px;
   background-color: rgb(22,22,22);
   color: #ddd;
-  line-height: 30px;
-  font-size: 18px;
+  line-height: 20px;
+  font-size: 10px;
   margin-bottom: 7px;
 }
 
 .searchForm button {
-  font-size: 14px;
+  font-size: 10px;
   border-radius: 5px;
   background-color: #aaa;
   font-family: 'Fira Sans', serif;
 }
 
 .error {
-  width: 300px;
+  padding-top: 5px;
+  width: 150px;
   margin: 0 auto;
 }
 
@@ -154,8 +159,8 @@ li {
 }
 
 .video img {
-  width: 320px;
-  height: 180px;
+  width: 125px;
+  height: 100px;
 }
 
 .videoTitle {
@@ -167,6 +172,10 @@ li {
   justify-content: space-around;
   align-items: flex-start;
   padding-left: 20px;
+}
+
+.video ul {
+  padding-left: 10px;
 }
 
 /*---FACEBOOK VIDEO----*/
@@ -181,7 +190,97 @@ li {
   width: 50%;
 }
 
-/*---GOOGLE VIDEO----*/
-.googleVideo {
-  display: flex;
+#youtubePlayer {
+  height: 250px;
+  width: 300px;
+}
+#facebookPlayer {
+  width: 325px;
+}
+
+/*---Responsiveness---*/
+@media (min-width: 768px) {
+  .home {
+    font-size: 15px;
+  }
+  .youtubeBanner {
+    height: 125px;
+  }
+
+  .searchContainer {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .searchContainer form {
+    width: 300px;
+  }
+
+  .searchForm input {
+    line-height: 30px;
+    font-size: 15px;
+    margin-left: 20px;
+  }
+
+  .error {
+    width: 300px;
+  }
+
+  .video img {
+    width: 225px;
+    height: 175px;
+  }
+
+  #youtubePlayer {
+    height: 350px;
+    width: 450px;
+  }
+
+  #facebookPlayer {
+    width: 500px;
+  }
+
+}
+
+
+@media (min-width: 1200px) {
+ .home {
+   font-size: 20px;
+ }
+
+ .youtubeBanner {
+   height: 200px;
+ }
+
+ .youtubeBanner img {
+   width: 200px;
+ }
+
+ #bannerDescription {
+   line-height: 30px;
+ }
+
+ .searchContainer form {
+   width: 400px;
+ }
+
+ .searchContainer input {
+   font-size: 20px;
+   line-height: 35px;
+ }
+
+ .searchContainer button {
+   font-size: 15px;
+ }
+
+ .video img {
+   width: 250px;
+   height: 200px;
+ }
+
+ #youtubePlayer {
+   height: 400px;
+   width: 600px;
+ }
+
 }
